Close button overlap fix

--- a/css/PrettyReddit.user.css
+++ b/css/PrettyReddit.user.css
@@ -1,7 +1,7 @@
 /* ==UserStyle==
 @name           FallenStar's reddit prettifier
 @namespace      github.com/openstyles/stylus
-@version        1.0.32
+@version        1.0.33
 @description    A new userstyle
 @author         FallenStar
 @updateURL		https://github.com/FallenStar08/FallenStar-s-Pretty-Reddit/raw/refs/heads/main/css/PrettyReddit.user.css
@@ -23,6 +23,14 @@
 		background-color: transparent !important;
 		border-radius   : 12px !important;
 		backdrop-filter : none !important;
+	}
+
+	/* Recursive mixin for comments nesting */
+	.comment-nesting(@level) when (@level > 0) {
+		.thing.comment {
+			.comment-styles();
+			.comment-nesting(@level - 1);
+		}
 	}
 
 	/*ANCHOR [DETACHED RULESETS] */
@@ -570,14 +578,6 @@
 	}
 
 
-	/* Recursive mixin for comments nesting */
-	.comment-nesting(@level) when (@level > 0) {
-		.thing.comment {
-			.comment-styles();
-			.comment-nesting(@level - 1);
-		}
-	}
-
 	/* up to 25 levels idk don't need more, probably */
 	.res-commentBoxes {
 		.thing.comment {
@@ -602,8 +602,9 @@
 
 	/* video player */
 	.pinnable-content.pinned .reddit-video-player-root {
-		position: relative !important;
-		top     : 0;
+		position    : relative !important;
+		top         : 0;
+		margin-right: 10px; //more space for close button
 	}
 
 	/* close button*/
